--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -8,7 +8,7 @@
                       <span class="fa fa-user"></span>
                   </span>                    
               </div>
-              <input type="text" class="form-control" placeholder="Username" required="required" name="username" [(ngModel)]="username">
+              <input type="text" class="form-control" placeholder="Username" required="required" name="username" [(ngModel)]="loginUserData.username">
           </div>
       </div>
   <div class="form-group">
@@ -18,15 +18,18 @@
                       <i class="fa fa-lock"></i>
                   </span>                    
               </div>
-              <input type="password" class="form-control" placeholder="Password" required="required"  name="password" [(ngModel)]="password">
+              <input type="password" class="form-control" placeholder="Password" required="required"  name="password" [(ngModel)]="loginUserData.password">
           </div>
       </div>        
       <div class="form-group">
-          <button type="submit" class="btn btn-primary btn-block" (click)=LoginUser()>Log in</button>
+          <button type="submit" class="btn btn-primary btn-block" (click)=loginUser()>Log in</button>
       </div>
       <div class="bottom-action clearfix">
           <label class="float-left form-check-label"><input type="checkbox"> Remember me</label>
           <!-- <a href="#" class="float-right">Forgot Password?</a> -->
-      </div>        
+      </div>  
+      <div *ngIf="errors" class="alert alert-danger"> 
+        {{ errors }} 
+    </div>      
   </form>
 </div>
