--- a/src/app/modules/products/new-product-category/new-product-category.component.html
+++ b/src/app/modules/products/new-product-category/new-product-category.component.html
@@ -12,13 +12,13 @@
     <div class="form-group">
       <label for="code" class="col-sm-3 control-label">Code</label>
       <div class="col-sm-3">
-     <input type="text" class="form-control" name="recipes" id="code" placeholder="Category Code">
+     <input type="text" class="form-control"  [(ngModel)]="prodCategory.code" name="code" placeholder="Category Code" required="required">
       </div>
     </div> <!-- form-group // -->
     <div class="form-group">
         <label for="name" class="col-sm-3 control-label">Name</label>
         <div class="col-sm-3">
-       <input type="text" class="form-control" name="price" id="Category Name" placeholder="Category Name">
+       <input type="text" class="form-control" [(ngModel)]="prodCategory.category" name="category" placeholder="Category Name" required="required">
         </div>
       </div>
     <hr>
@@ -29,7 +29,7 @@
       </div>
     <div class="form-group">
       <div class="col-sm-offset-3 col-sm-9">
-        <button type="submit" class="btn btn-primary" style="float: right;">Submit</button>
+        <button type="submit" (click)="addCategory()" class="btn btn-primary" style="float: right;">Submit</button>
       </div>
     </div> <!-- form-group // -->
   </form>
