--- a/src/app/modules/products/products.component.html
+++ b/src/app/modules/products/products.component.html
@@ -9,6 +9,7 @@
     <mat-tab label="View"> 
      <br>   
      <p>Product Listing will be shown Below</p>   
+     <a routerLink = 'new-category'>Go to new category</a>
 
     </mat-tab>
     <mat-tab label="Add Product"> 
