--- a/src/app/modules/products/new-product-category/new-product-category.component.html
+++ b/src/app/modules/products/new-product-category/new-product-category.component.html
@@ -7,18 +7,20 @@
   </div> 
   <div class="panel-body">
     
-  <form action="designer-finish.html" class="form-horizontal" role="form">
+  <form action="designer-finish.html" #catForm="ngForm" (submit)="addCategory(catForm)" class="form-horizontal" role="form">
      
     <div class="form-group">
       <label for="code" class="col-sm-3 control-label">Code</label>
       <div class="col-sm-3">
-     <input type="text" class="form-control"  [(ngModel)]="prodCategory.code" name="code" placeholder="Category Code" required="required">
+     <input type="text" #code="ngModel" class="form-control" required  ngModel name="code" placeholder="Category Code" required="required">
+     <!-- <mat-error *ngIf="code.invalid">Please Enter a Category Name</mat-error> -->
       </div>
     </div> <!-- form-group // -->
     <div class="form-group">
         <label for="name" class="col-sm-3 control-label">Name</label>
         <div class="col-sm-3">
-       <input type="text" class="form-control" [(ngModel)]="prodCategory.category" name="category" placeholder="Category Name" required="required">
+       <input type="text" required #title="ngModel" class="form-control" ngModel name="category" placeholder="Category Name" required="required">
+      <!--  <mat-error *ngIf="title.invalid">Please Enter a Category Name</mat-error> -->
         </div>
       </div>
     <hr>
@@ -29,8 +31,9 @@
       </div>
     <div class="form-group">
       <div class="col-sm-offset-3 col-sm-9">
-        <button type="submit" (click)="addCategory()" class="btn btn-primary" style="float: right;">Submit</button>
+        <button type="submit" class="btn btn-primary" style="float: right;">Submit</button>
       </div>
+    
     </div> <!-- form-group // -->
   </form>
-    
+
